--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
             }
         }
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X4MSSVR0T5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-X4MSSVR0T5');
+    </script>
     <style type="text/css">
         @media (max-width: 640px) {
             .game-container {
@@ -36,15 +45,6 @@
         }
     </style>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-X4MSSVR0T5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-X4MSSVR0T5');
-</script>
 <body class="bg-apple-lightgray text-apple-dark">
     <header class="bg-apple-blue text-white p-4 md:p-6 shadow-md">
         <div class="container mx-auto">
@@ -59,6 +59,7 @@
                         <li><a href="#about" class="hover:text-apple-yellow transition-colors">About</a></li>
                         <li><a href="#features" class="hover:text-apple-yellow transition-colors">Features</a></li>
                         <li><a href="#how-to-play" class="hover:text-apple-yellow transition-colors">How To Play</a></li>
+                        <li><a href="blog-gpt-gaming.html" class="hover:text-apple-yellow transition-colors">Blog</a></li>
                     </ul>
                 </nav>
             </div>
@@ -111,6 +112,24 @@
                 <div class="bg-white rounded-lg shadow-lg p-6">
                     <h3 class="text-xl font-semibold text-apple-blue mb-3">Customization Options</h3>
                     <p>Design your supermarket layout, choose product selections, and create a unique shopping experience.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="blog-preview" class="my-12">
+            <h2 class="text-2xl md:text-3xl font-bold mb-6 text-apple-blue">Latest Blog Posts</h2>
+            <div class="grid grid-cols-1 gap-6">
+                <div class="bg-white rounded-lg shadow-lg p-6 hover:shadow-xl transition-shadow">
+                    <h3 class="text-xl font-semibold text-apple-purple mb-3">
+                        <a href="blog-gpt-gaming.html" class="hover:text-apple-blue transition-colors">
+                            Revolutionary Ways to Enhance Your Supermarket Simulator Experience with GPT
+                        </a>
+                    </h3>
+                    <p class="text-apple-gray mb-4">Discover how to use GPT to improve your gameplay, optimize your supermarket management strategies, and achieve better results in Supermarket Simulator.</p>
+                    <div class="flex justify-between items-center">
+                        <a href="blog-gpt-gaming.html" class="text-apple-blue hover:underline">Read more →</a>
+                        <span class="text-apple-gray text-sm">Published: March 2024</span>
+                    </div>
                 </div>
             </div>
         </section>
